# ROS2_Adaptive_Suspension_system

./: .gitignore  LICENSE  README.md
firmware/MicroController/: controller.ino
ros2_packages/gazebo_simulation_suspension_system/: CMakeLists.txt  package.xml
ros2_packages/gazebo_simulation_suspension_system/config/: damper_view.rviz
ros2_packages/gazebo_simulation_suspension_system/gazebo_simulation_suspension_system/: damper_controller_node.py  dashboard_node.py
ros2_packages/gazebo_simulation_suspension_system/launch/: damper_simulation_launch.py
ros2_packages/gazebo_simulation_suspension_system/urdf/: em_damper.urdf
ros2_packages/gazebo_simulation_suspension_system/worlds/: damper_lab.world
ros2_packages/semi_active_suspension_system/: package.xml  setup.cfg  setup.py
ros2_packages/semi_active_suspension_system/launch/: system.launch.py
ros2_packages/semi_active_suspension_system/semi_active_suspension_system/: camera_node.py  controller_node.py  estimation_node.py  fusion_node.py  optical_flow.py  preprocessing_node.py  tracking_node.py  visualization_node.py  yolo_detection_node.py
simulink/: AdaptiveSuspensionpid(1).slx
videos/SimualationRuns/: 2026-06-05 23-45-26.mkv  2026-06-05 23-46-22.mkv
